[tool.poetry]
name = "websnapshot"
version = "0.1.11"
description = "Python command-line tool for capture snapshots of web pages using Headless Chromium."
authors = ["Sergey M <yamldeveloper@proton.me>"]
readme = "README.md"
homepage = "https://github.com/s3rgeym/websnapshot"
exclude = [".git", "websnapshot/websnapshots"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.1"
pyppeteer = "^0.0.25"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.poetry.scripts]
websnapshot = "websnapshot:websnapshot"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
